# lo-agent

./: .gitignore  LICENSE  README.md  gap-analysis.md  install.sh  pyproject.toml
demos/jlens/: demo_antislop.py  demo_bestof.py  demo_consistency.py  demo_determinism.py  demo_grammar.py  demo_jlens.py  demo_shim.sh
scripts/: install-sandbox.sh
skills/: sql_core.toml  sql_select.toml  yes_no.toml
src/local_harness/: __init__.py  bench.py  sandbox.py  tuned_replay.py
src/local_harness/agent/: __init__.py  codemode.py  commands.py  compaction.py  frontmatter.py  loop.py  memory.py  notebook.py  permissions.py  presets.py  structured_memory.py  tools.py
src/local_harness/background/: __init__.py  auto_skills.py  consolidate.py  cycle.py  induce.py  propose.py  reflect.py
src/local_harness/cli/: main.py  progress.py
src/local_harness/events/: __init__.py  bus.py  export.py  log.py  replay.py
src/local_harness/guardrails/: __init__.py  concept_watch.py  errors.py  guardrails.py  loops.py  nudges.py  rescue.py  steps.py  validator.py
src/local_harness/inference/: __init__.py  capabilities.py  client.py  lora.py  types.py
src/local_harness/inference/adapters/: __init__.py  base.py  generic.py  llamacpp.py  vllm.py
src/local_harness/integrations/: __init__.py  load.py  mcp.py  utcp.py
src/local_harness/jlens/: NOTICE  __init__.py  cli.py  exports.py  fit_torch.py  fitting.py  interventions.py  lens.py  manager.py  model_reader.py  native_client.py  readout.py  service.py  topology.py
src/local_harness/jlens/native/: lo_jlens_shim.cpp
src/local_harness/logits/: __init__.py  antislop.py  bias.py  budget.py  grammar_stage.py  guidance.py  pipeline.py  samplers.py  slop.py
src/local_harness/native/: __init__.py  backend.py  lora.py  skill_exec.py  steering.py
src/local_harness/optimize/: __init__.py  bootstrap.py  dspy_opt.py  prompt_opt.py  weight_opt.py
src/local_harness/proxy/: __init__.py  anthropic.py  app.py  config.py  engine.py
src/local_harness/server/: __init__.py  app.py  coordinator.py  sessions.py  webui.py
src/local_harness/signals/: __init__.py  jspace.py  metrics.py  policies.py  semantic_entropy.py
src/local_harness/sim/: __init__.py  pty_driver.py  scenario.py  scenarios.py
src/local_harness/skills/: __init__.py  exec.py  ir.py  skill.py
src/local_harness/skills/builtin/: json_extract.toml
src/local_harness/structured/: __init__.py  builder.py
src/local_harness/tree/: __init__.py  state.py
src/local_harness/tree/search/: beam.py  best_of_n.py  plan_search.py  self_consistency.py
src/local_harness/tui/: __init__.py  advantages.py  app.py  lens_render.py  lens_screen.py  render.py
tests/: conftest.py  e2e_support.py  jlens_support.py  mocks.py  test_agent.py  test_agent_self_knowledge.py  test_bus.py  test_capabilities.py  test_cli_ux.py  test_codemode.py  test_compaction_auto.py  test_coordinator.py  test_custom_commands.py  test_determinism_and_entropy.py  test_e2e_journeys.py  test_e2e_live.py  test_e2e_pty.py  test_event_log.py  test_extras_boundary.py  test_file_presets.py  test_frontmatter.py  test_grammar.py  test_guardrails.py  test_integrations.py  test_jlens_exports.py  test_jlens_fit_torch.py  test_jlens_interventions.py  test_jlens_lifecycle.py  test_jlens_math.py  test_jlens_service.py  test_jlens_shim.py  test_jlens_tui.py  test_lora.py  test_native.py  test_notebook.py  test_permissions.py  test_phase1_cli.py  test_phase2_more.py  test_phase4.py  test_polish_followups.py  (+20 more)
