[project]
name = "local-harness"
version = "0.1.0"
description = "Agent harness that exploits local-LLM advantages: determinism, logit control, KV branching, free tokens"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "starlette>=0.40",
    "uvicorn>=0.32",
    "textual>=1.0",
]

[project.optional-dependencies]
dspy = ["dspy>=2.6"]
native = ["torch>=2.4", "transformers>=4.48", "peft>=0.14", "accelerate>=1.0"]
# microVM sandbox (libkrun, own kernel per sandbox) — ships the Python SDK; the
# msb runtime is installed by scripts/install-sandbox.sh (needs Linux+KVM).
sandbox = ["microsandbox"]

[project.scripts]
harness = "local_harness.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.hatch.build.targets.wheel]
packages = ["src/local_harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
