[project]
name = "lo-agent"
version = "0.2.22"
description = "Agent harness that exploits local-LLM advantages: determinism, logit control, KV branching, free tokens"
readme = "README.md"
license = "LicenseRef-lo-agent-Community-1.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
homepage = "https://github.com/IMJONEZZ/lo-agent"
urls = { Homepage = "https://github.com/IMJONEZZ/lo-agent", Source = "https://github.com/IMJONEZZ/lo-agent" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "starlette>=0.40",
    "uvicorn>=0.32",
    "textual>=1.0",
]

[project.optional-dependencies]
dspy = ["dspy>=2.6"]
native = ["torch>=2.4", "transformers>=4.48", "peft>=0.14", "accelerate>=1.0"]
# Jacobian lens (Rung 6: activations over HTTP). Pure numpy math + gguf I/O;
# the C++ activation sidecar is built on demand by `lo lens up`, not shipped.
lens = ["numpy>=1.26", "gguf>=0.10", "httpx>=0.27"]
# microVM sandbox (libkrun, own kernel per sandbox) — ships the Python SDK; the
# msb runtime is installed by scripts/install-sandbox.sh (needs Linux+KVM).
sandbox = ["microsandbox"]

[project.scripts]
lo = "local_harness.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.hatch.build.targets.wheel]
packages = ["src/local_harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: user-simulation journey (Pilot + real session server + mock model); runs by default",
    "pty: user-simulation smoke through a real PTY subprocess; opt in with -m pty",
    "live: user-simulation against a real model endpoint (needs LO_LIVE_URL); opt in with -m live",
]
addopts = "-m 'not pty and not live'"
